--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,8 @@
-<%probide (title:"signip")%>
+<%probide (title:"signup")%>
     <div class="form">]
         <h1 class="text-center">Signup</h1>
         <div class="container">
-            <%= form_for @user do |f|%>
+            <%= form_for @user do |f| %>
                 <%= f.label :name %>
                 <%= f.text_field :name, class: "form-control" %>
 
