--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Home') %>
-　<div class="jumbotron">
+　<div class="content jumbotron">
     <nav class="navbar navbar-dark bg-primary">
   <!-- Navbar content -->
     </nav>
@@ -8,5 +8,5 @@
   <hr class="my-4">
   <p>A learning system based on formalised teaching but with the help of electronic resources is known as E-learning. While teaching can be based in or out of the classrooms, the use of computers and the Internet forms the major component of E-learning. E-learning can also be termed as a network enabled transfer of skills and knowledge, and the delivery of education is made to a large number of recipients at the same or different times. Earlier, it was not accepted wholeheartedly as it was assumed that this system lacked the human element required in learning.
 </p>
-<img src="study_pic.jepg">
+<img src="assets/study_pic.jepg" class="homepage-img rounded mx-auto d-block">
 </div>
