--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'Contact') %>
-<div class="contact jumbotron">
-    <h1 class="text-center">Contact us</h1>
-    <p class="text-center">This is the contact page with all information.</p>
+<div class="jumbotron">
+    <div class="contact jumbotron">
+        <h1 class="text-center">Contact us</h1>
+        <p class="text-center">This is the contact page with all information.</p>
+    </div>
 </div>
