--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,10 @@
-<% provide(title:'login')%>
+<% provide(title:'Signup')%>
+<div class="jumbotron bg-dark text-light m-4">
+    <%= render 'form' %>
+
+    <% provide(:title, 'Login')%>
+    <div class="form jumbotron bg-dark text-light">
+    <h1 class="text-center display-4">Login</h1>
     <h1 class=text-center>Sign up</h1>
         <div class="container">
             <%= form_for(@user) do |f| %>
