--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,16 @@
         <%= link_to "Home", root_path, class: "nav-link" %>
     </li>
     <li class="navbar-item">
-        <%= lnik_to"About", about_path, class: "nav-link" %>
+        <%= link_to"About", about_path, class: "nav-link" %>
     </li>
     <li class="nav-item">
         <%= link_to"contact us", contact_path, class: "nav-link" %>
     </li>
+
+    <li class="nav-item">
+        <%= link_to"signup", signup_path, class: "nabv-link" %>
+    </li>
 </ul>
+
+
     
