--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
   </head>
 
   <body>
-    <%= render 'layouts/headeer' %>
+    <%= render 'layouts/header' %>
 
     <div class="container pt-4 mb-0">
-      <%=render 'shared/error_message' %>
+      
     </div>
 
     <div class="container m-4">
