--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,20 @@
 <% provide(:title, 'Home') %>
 　<div class="content jumbotron">
-    <nav class="navbar navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg justify-content-end navbar-light bg-light">
+  <a class="navbar-brand text-info" href="#">E-Learning</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link text-info" href="#">Signup</a>
+      <a class="nav-item nav-link text-info" href="#">Login</a>
+    </div>
+  </div>
+</nav>
   <!-- Navbar content -->
     </nav>
-  <h1 class="text-center display-4">E-learning</h1>
+  <h1 class="text-center display-4 text-info">E-Learning</h1>
   <p class="lead"></p>
   <hr class="my-4">
   <p>A learning system based on formalised teaching but with the help of electronic resources is known as E-learning. While teaching can be based in or out of the classrooms, the use of computers and the Internet forms the major component of E-learning. E-learning can also be termed as a network enabled transfer of skills and knowledge, and the delivery of education is made to a large number of recipients at the same or different times. Earlier, it was not accepted wholeheartedly as it was assumed that this system lacked the human element required in learning.
