--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
-<%probide (title:"signup")%>
-    <div class="form">]
+<%provide(:title, "Signup")%>
+    <div class="form">
         <h1 class="text-center">Signup</h1>
         <div class="container">
             <%= form_for @user do |f| %>
@@ -10,10 +10,10 @@
                 <%= f.text_field :email, class: "form-control" %>
 
                 <%= f.label :password %>
-                <%= f.text_field, class: "form-control" %>
+                <%= f.password_field :password, class: "form-control" %>
 
                 <%= f.label :password_confirmation, "Confirm Password" %>
-                <%= f.text_field :password_confirmation, class: "form-control" %>
+                <%= f.password_field :password_confirmation, class: "form-control" %>
 
                 <%= f.submit "Save", class: "btn btn-block btn-success" %>
             <% end %>
