--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title><%= yield(:title) %>  | E-learning</title>
     <title>ELearningAyumi</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +11,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %>
+
+    <div class="container pt-4 mb-0">
+      
+    </div>
+
+    <div class="container m-4">
+      <%= yield %>
+    </div>
   </body>
 </html>
