--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,19 @@
-<ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-        <%= link_to "Home", root_path, class: "nav-link" %>
-    </li>
-    <li class="navbar-item">
-        <%= link_to"About", about_path, class: "nav-link" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to"contact us", contact_path, class: "nav-link" %>
-    </li>
 
-    <li class="nav-item">
-        <%= link_to"signup", signup_path, class: "nabv-link" %>
-    </li>
-</ul>
-
-
+<nav class="navbar navbar-expand-lg justify-content-end navbar-light bg-light">
+    <%= link_to"E-Learning", root_path, class: "navbar-brand text-info" %> 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav mr-auto">
+            <% if logged_in? %>
+                <%= link_to"Profile", user_path(current_user), class: "nav-link" %>
+                <%= link_to "Logout", logout_path, class:"nav-link" %>
+            <% else %>
+                <%= link_to"Signup", signup_path, class: "nav-link" %> 
+                <%= link_to"Login", login_path, class: "nav-link" %>
+            <% end %>
+        </ul>
+    </div>
+</nav>
     
