--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
             <% if logged_in? %>
-                <%= link_to"Profile", user_path(current_user), class: "nav-link" %>
+                <%= link_to current_user.name, user_path(current_user), class: "nav-link" %>
                 <%= link_to "Logout", logout_path, class:"nav-link" %>
+                <%= link_to"Settings",edit_user_path(current_user), class:"nav-link" %>
             <% else %>
                 <%= link_to"Signup", signup_path, class: "nav-link" %> 
                 <%= link_to"Login", login_path, class: "nav-link" %>
