--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Signup") %>
 <div class="jumbotron bg-light text-center m-4">
-    <h1 class="text-center">Signup</h1>
+    <h1 class="text-center display">Sign up</h1>
     <%= render 'form' %>
     <p>This will be a sign up page for new users</p>
 </div>
