--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,9 @@
 <%provide(:title, "Edit")%>
-<div class="form jumbotron bg-light text-info">
- <h1 class="text-center display">Settings</h1>
- <div class="container">
- <%= render 'form' %>
-</div>
-</div>    
+    <div class="form jumbotron bg-light text-info">
+        <h1 class="text-center display">Settings</h1>
+        <div class="container">
+            <%= render 'form' %>
+            <%= link_to "Back", user_path(current_user)%>
+        </div>
+    </div>    
             
