--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,8 @@
                 <%= link_to current_user.name, user_path(current_user), class: "nav-link" %>
                 <%= link_to "Logout", logout_path, class:"nav-link" %>
                 <%= link_to"Settings",edit_user_path(current_user), class:"nav-link" %>
+                <%= link_to "users", users_path, class:"nav-link" %>
+
             <% else %>
                 <%= link_to"Signup", signup_path, class: "nav-link" %> 
                 <%= link_to"Login", login_path, class: "nav-link" %>
