--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,14 +3,14 @@
     <h1 class="text-center">List of Users</h1>
     <div class="container">
         <ul class="users">
-            <% @user.each do |user| %>
+            <% @users.each do |user| %>
                 <li>
                     <%= gravatar_for user, size: 52 %>
                     <%= link_to user.name, user %>
                     <%= link_to 'delete', user_path(user), method: :delete, date: { confirm: "You sure?"} %>
                 </li>
-                <% end %>
-                <%= will_paginate%>
+            <% end %>
+            <%= will_paginate%>
         </ul>
     </div>
 </div>
