--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,10 @@
                 <%= @user.name %>
             </h1>
         </section>
+
         <section>
-            <%#= render'shared/stats'%>
+            <%= render'shared/stats'%>
+            <%= render 'follow_form' if logged_in? %>
         </section>
     </aside>
 </div>
