--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,16 +1,16 @@
 <% @user ||= current_user %>
 <div class="stats">
-    <a href="<% following_user_path(@user) %> ">
+    <a href="<%= following_user_path(@user) %> ">
         <strong id="following" class="stat">
-            <%= @user.following.count %>
+            <%= @user.followed_users.count %>
         </strong>
         following
     </a>
-        <a herf="<% followers_user_path(@user) %> ">
-            <strong id="followers" class="stat">
-                <%= @user.followers.count %>
-            </strong>
-            followers
-        </a>
+    <a href="<%= followers_user_path(@user) %> ">
+        <strong id="followers" class="stat">
+            <%= @user.followers.count %>
+        </strong>
+        followers
+    </a>
 </div>
             
