--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_for ([:admin, @category]) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
 
-    <%= f.label :email %>
-    <%= f.text_field :email, class: "form-control" %>
+    <%= f.label :description %>
+    <%= f.text_field :description, class: "form-control" %>
 
     <%= f.submit "Save", class: "btn btn-block btn-success" %>
 <% end %>
