--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,9 @@
                 <%= link_to "Logout", logout_path, class:"nav-link" %>
                 <%= link_to"Settings",edit_user_path(current_user), class:"nav-link" %>
                 <%= link_to "Users", users_path, class:"nav-link" %>
-                <%= link_to "Categories", admin_categories_path, class:"nav-link" %>
-
+                <% if current_user.is_admin %>
+                    <%= link_to "Manage Categories", admin_categories_path, class:"nav-link" %>
+                <% end %>
             <% else %>
                 <%= link_to"Signup", signup_path, class: "nav-link" %> 
                 <%= link_to"Login", login_path, class: "nav-link" %>
