--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -3,7 +3,7 @@
     <%= f.text_field :title, class: "form-control" %>
 
     <%= f.label :description %>
-    <%= f.text_field :description, class: "form-control" %>
+    <%= f.text_area :description, class: "form-control" %>
 
     <%= f.submit "Save", class: "btn btn-block btn-success" %>
 <% end %>
